--- a/project_info.json
+++ b/project_info.json
@@ -1,1 +1,1 @@
-{"gitStatus":"CLONE_COMPLETED","testStatus":0,"submitStatus":0,"userRepo":"https://github.com/siddhartha6/MissionRnD-CMrndTest2.git","currentTestResult":null,"workingDirectory":"C:\\Users\\siddu\\MissionRnDProjects\\CMrndTest2"}
+{"gitStatus":"REPO_CREATED","testStatus":0,"submitStatus":0,"userRepo":"https://github.com/siddhartha6/MissionRnD-CMrndTest2.git","currentTestResult":null,"workingDirectory":"C:\\Users\\siddu\\MissionRnDProjects\\CMrndTest2"}
